add configure pin code and remove pin support
