# src/api/configure_pin_code.go
@@ -6,9 +6,9 @@ import (
 	deviceWallet "github.com/skycoin/hardware-wallet-go/src/device-wallet"
 )
 
-// URI: /api/v1/set_pin_code
+// URI: /api/v1/configure_pin_code
 // Method: POST
-func setPinCode(gateway Gatewayer) http.HandlerFunc {
+func configurePinCode(gateway Gatewayer) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		// allow only one request at a time
 		closeFunc, err := serialize(gateway)
@@ -26,20 +26,27 @@ func setPinCode(gateway Gatewayer) http.HandlerFunc {
 			return
 		}
 
+		removePin, err := parseBoolFlag(r.FormValue("remove_pin"))
+		if err != nil {
+			resp := NewHTTPErrorResponse(http.StatusBadRequest, "invalid value for remove_pin")
+			writeHTTPResponse(w, resp)
+			return
+		}
+
 		// for integration tests
 		if autoPressEmulatorButtons {
 			err := gateway.SetAutoPressButton(true, deviceWallet.ButtonRight)
 			if err != nil {
-				logger.Error("generateAddress failed: %s", err.Error())
+				logger.Error("configurePinCode failed: %s", err.Error())
 				resp := NewHTTPErrorResponse(http.StatusInternalServerError, err.Error())
 				writeHTTPResponse(w, resp)
 				return
 			}
 		}
 
-		msg, err := gateway.ChangePin(newBoolPtr(false))
+		msg, err := gateway.ChangePin(&removePin)
 		if err != nil {
-			logger.Errorf("setPinCode failed: %s", err.Error())
+			logger.Errorf("configurePinCode failed: %s", err.Error())
 			resp := NewHTTPErrorResponse(http.StatusInternalServerError, err.Error())
 			writeHTTPResponse(w, resp)
 			return
